--- a/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
+++ b/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
@@ -1,4 +1,4 @@
 databaseChangeLog:
   - include:
-      file: product/changelog-0.1.0-product.yaml
+      file: pc/changelog-0.1.0-pc.yaml
       relativeToChangelogFile: true
