--- a/src/main/resources/db/changelog/0.1.0/pc/001-create-pc-processor-brands.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/001-create-pc-processor-brands.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 001-create-product
+      id: 001-create-pc-processor-brands
       author: grz55
       changes:
         - createTable:
-            tableName: product
+            tableName: pc_processor_brands
             columns:
               - column:
                   name: id
@@ -14,6 +14,3 @@ databaseChangeLog:
               - column:
                   name: name
                   type: VARCHAR(255)
-              - column:
-                  name: price
-                  type: DECIMAL(10, 2)
