feat: pc and smartphone related dictionaries values added

--- a/src/main/resources/db/changelog/0.1.0/pc/changelog-0.1.0-pc.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/changelog-0.1.0-pc.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: 002-create-pc-graphics-card-brands.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 003-create-pc-operating-systems.yaml
+      relativeToChangelogFile: true
