--- a/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
+++ b/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: pc/changelog-0.1.0-pc.yaml
       relativeToChangelogFile: true
+  - include:
+      file: smartphone/changelog-0.1.0-smartphone.yaml
+      relativeToChangelogFile: true
