--- a/src/main/resources/db/changelog/0.1.0/test_data/changelog-0.1.0-data.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/changelog-0.1.0-data.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - include:
-      file: 001-insert-data-pc-processor-brands.yaml
+      file: pc/changelog-0.1.0-pc-data.yaml
       relativeToChangelogFile: true
   - include:
-      file: 002-insert-data-pc-graphics-card-brands.yaml
+      file: smartphone/changelog-0.1.0-smartphone-data.yaml
       relativeToChangelogFile: true
