--- a/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
+++ b/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: smartphone/changelog-0.1.0-smartphone.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tv/changelog-0.1.0-tv.yaml
+      relativeToChangelogFile: true
