--- a/src/main/resources/db/changelog/0.1.0/test_data/changelog-0.1.0-data.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/changelog-0.1.0-data.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: smartphone/changelog-0.1.0-smartphone-data.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tv/changelog-0.1.0-tv-data.yaml
+      relativeToChangelogFile: true
