feat: pc test data added, constraints nullable false added to primary keys

--- a/src/main/resources/db/changelog/0.1.0/pc/changelog-0.1.0-pc.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/changelog-0.1.0-pc.yaml
@@ -8,3 +8,6 @@ databaseChangeLog:
   - include:
       file: 003-create-pc-operating-systems.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 004-create-pcs.yaml
+      relativeToChangelogFile: true
