--- a/src/main/resources/db/changelog/0.1.0/test_data/pc/changelog-0.1.0-pc-data.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/pc/changelog-0.1.0-pc-data.yaml
@@ -8,3 +8,6 @@ databaseChangeLog:
   - include:
       file: 003-insert-data-pc-operating-systems.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 004-insert-data-pcs.yaml
+      relativeToChangelogFile: true
