--- a/src/main/resources/db/changelog/0.1.0/tv/001-create-tv-brands.yaml
+++ b/src/main/resources/db/changelog/0.1.0/tv/001-create-tv-brands.yaml
@@ -8,9 +8,12 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: UUID
+                  type: uuid
                   constraints:
+                    nullable: false
                     primaryKey: true
               - column:
                   name: name
-                  type: VARCHAR(255)
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
