--- a/src/main/resources/db/changelog/0.1.0/test_data/smartphone/changelog-0.1.0-smartphone-data.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/smartphone/changelog-0.1.0-smartphone-data.yaml
@@ -11,3 +11,6 @@ databaseChangeLog:
   - include:
       file: 004-insert-data-smartphone-processor-brands.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 005-insert-data-smartphones.yaml
+      relativeToChangelogFile: true
