--- a/src/main/resources/db/changelog/0.1.0/test_data/tv/changelog-0.1.0-tv-data.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/tv/changelog-0.1.0-tv-data.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: 002-insert-data-tv-screen-types.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 003-insert-data-tvs.yaml
+      relativeToChangelogFile: true
