--- a/src/main/resources/db/changelog/0.1.0/tv/changelog-0.1.0-tv.yaml
+++ b/src/main/resources/db/changelog/0.1.0/tv/changelog-0.1.0-tv.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: 002-create-tv-screen-types.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 003-create-tvs.yaml
+      relativeToChangelogFile: true
