feat: tvs pcs smartphones relationships added

--- a/src/main/resources/db/changelog/0.1.0/smartphone/changelog-0.1.0-smartphone.yaml
+++ b/src/main/resources/db/changelog/0.1.0/smartphone/changelog-0.1.0-smartphone.yaml
@@ -14,3 +14,6 @@ databaseChangeLog:
   - include:
       file: 005-create-smartphones.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 006-create-smartphone-relationships.yaml
+      relativeToChangelogFile: true
