--- a/src/main/resources/db/changelog/0.1.0/pc/changelog-0.1.0-pc.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/changelog-0.1.0-pc.yaml
@@ -11,3 +11,6 @@ databaseChangeLog:
   - include:
       file: 004-create-pcs.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 005-create-pc-relationships.yaml
+      relativeToChangelogFile: true
