--- a/src/main/resources/db/changelog/0.1.0/tv/changelog-0.1.0-tv.yaml
+++ b/src/main/resources/db/changelog/0.1.0/tv/changelog-0.1.0-tv.yaml
@@ -8,3 +8,6 @@ databaseChangeLog:
   - include:
       file: 003-create-tvs.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 004-create-tv-relationships.yaml
+      relativeToChangelogFile: true
