fix(8): missing constraints added

--- a/src/main/resources/db/changelog/0.1.0/tv/003-create-tvs.yaml
+++ b/src/main/resources/db/changelog/0.1.0/tv/003-create-tvs.yaml
@@ -80,9 +80,13 @@ databaseChangeLog:
               - column:
                   name: hdmi_count
                   type: int
+                  constraints:
+                    nullable: false
               - column:
                   name: usb_count
                   type: int
+                  constraints:
+                    nullable: false
               - column:
                   name: price
                   type: decimal(10, 2)
