feat(54): pcs filtering sorting (#10)
* feat(54): pc filtering dtos and controller added

* feat(54): hibernate-jpamodelgen and maven-processor-plugin added

* feat(54): filter pc initial implementation

* feat(54): filtering specification created

* feat(54): javax.annotation-api added for modelgen

* feat(54): conflicts resolved

* feat(54): paging and sorting implementation

* feat(54): Search and combo data postman requests added

* feat(54): Builder added to PagingAndSortingMetadataDTO

* fix(54): hibernate-jpamodelgen version bumped to 6.3.1.Final to comply with SB3

--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,19 @@
 		<spotless.version>2.40.0</spotless.version>
 		<swagger.version>2.2.0</swagger.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<hibernate-jpamodelgen.version>6.3.1.Final</hibernate-jpamodelgen.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>${hibernate-jpamodelgen.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -134,6 +141,26 @@
 						</googleJavaFormat>
 					</java>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.bsc.maven</groupId>
+				<artifactId>maven-processor-plugin</artifactId>
+				<version>3.3.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<phase>generate-sources</phase>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.hibernate.orm</groupId>
+						<artifactId>hibernate-jpamodelgen</artifactId>
+						<version>${hibernate-jpamodelgen.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
