feat(66): h2 and postgres profiles added, databases configured

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,18 +2,8 @@ server:
   port: 8080
 
 spring:
-  datasource:
-    url: jdbc:h2:mem:compstoredb
-    username: user
-    password: test
-    driverClassName: org.h2.Driver
-  jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-  h2:
-    console:
-      enabled: true
-  hibernate:
-    ddl-auto: update
+  profiles:
+    active: dev-h2
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
     enabled: true
