fix(85): ram and drive gb capacities refactor to enums

--- a/src/main/resources/db/changelog/0.1.0/pc/004-create-pcs.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/004-create-pcs.yaml
@@ -34,12 +34,12 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: ram_gb_capacity
-                  type: int
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
                   name: drive_gb_capacity
-                  type: int
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
