fix(85): removed gb from capacities, capacities refactor in smartphone

--- a/src/main/resources/db/changelog/0.1.0/pc/004-create-pcs.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/004-create-pcs.yaml
@@ -33,12 +33,12 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: ram_gb_capacity
+                  name: ram_capacity
                   type: varchar(255)
                   constraints:
                     nullable: false
               - column:
-                  name: drive_gb_capacity
+                  name: drive_capacity
                   type: varchar(255)
                   constraints:
                     nullable: false
