fix(85): ram and storage combo refactor (#18)
* fix(85): old database schema removed

* fix(85): ram and drive gb capacities refactor to enums

* fix(85): removed gb from capacities, capacities refactor in smartphone

--- a/src/main/resources/db/changelog/0.1.0/pc/004-create-pcs.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/004-create-pcs.yaml
@@ -33,13 +33,13 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: ram_gb_capacity
-                  type: int
+                  name: ram_capacity
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
-                  name: drive_gb_capacity
-                  type: int
+                  name: drive_capacity
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
