fix(86): common processor brands refactor in pcs and smartphones

--- a/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
+++ b/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
@@ -1,5 +1,8 @@
 databaseChangeLog:
   - include:
+      file: dictionary/changelog-0.1.0-dictionary.yaml
+      relativeToChangelogFile: true
+  - include:
       file: pc/changelog-0.1.0-pc.yaml
       relativeToChangelogFile: true
   - include:
