--- a/src/main/resources/db/changelog/0.1.0/pc/004-create-pc-relationships.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/004-create-pc-relationships.yaml
@@ -6,9 +6,9 @@ databaseChangeLog:
         - addForeignKeyConstraint:
             baseTableName: pcs
             baseColumnNames: processor_brand_uuid
-            referencedTableName: pc_processor_brands
+            referencedTableName: processor_brands
             referencedColumnNames: id
-            constraintName: fk_pcs_pc_processor_brands
+            constraintName: fk_pcs_processor_brands
         - addForeignKeyConstraint:
             baseTableName: pcs
             baseColumnNames: graphics_card_brand_uuid
