--- a/src/main/resources/db/changelog/0.1.0/smartphone/005-create-smartphone-relationships.yaml
+++ b/src/main/resources/db/changelog/0.1.0/smartphone/005-create-smartphone-relationships.yaml
@@ -24,6 +24,6 @@ databaseChangeLog:
         - addForeignKeyConstraint:
             baseTableName: smartphones
             baseColumnNames: processor_brand_uuid
-            referencedTableName: smartphone_processor_brands
+            referencedTableName: processor_brands
             referencedColumnNames: id
-            constraintName: fk_smartphones_smartphone_processor_brands
+            constraintName: fk_smartphones_processor_brands
