--- a/src/main/resources/db/changelog/0.1.0/dictionary/002-create-graphics-card-brands.yaml
+++ b/src/main/resources/db/changelog/0.1.0/dictionary/002-create-graphics-card-brands.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 002-create-pc-graphics-card-brands
+      id: 002-create-graphics-card-brands
       author: grz55
       changes:
         - createTable:
-            tableName: pc_graphics_card_brands
+            tableName: graphics_card_brands
             columns:
               - column:
                   name: id
@@ -14,6 +14,11 @@ databaseChangeLog:
                     primaryKey: true
               - column:
                   name: name
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: graphics_card_brand_device_type
                   type: varchar(255)
                   constraints:
                     nullable: false
