--- a/src/main/resources/db/changelog/0.1.0/dictionary/changelog-0.1.0-dictionary.yaml
+++ b/src/main/resources/db/changelog/0.1.0/dictionary/changelog-0.1.0-dictionary.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: 001-create-processor-brands.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 002-create-graphics-card-brands.yaml
+      relativeToChangelogFile: true
