--- a/src/main/resources/db/changelog/0.1.0/test_data/dictionary/changelog-0.1.0-dictionary-data.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/dictionary/changelog-0.1.0-dictionary-data.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: 001-insert-data-processor-brands.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 002-insert-data-graphics-card-brands.yaml
+      relativeToChangelogFile: true
