--- a/src/main/resources/db/changelog/0.1.0/dictionary/changelog-0.1.0-dictionary.yaml
+++ b/src/main/resources/db/changelog/0.1.0/dictionary/changelog-0.1.0-dictionary.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: 002-create-graphics-card-brands.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 003-create-brands.yaml
+      relativeToChangelogFile: true
