--- a/src/main/resources/db/changelog/0.1.0/smartphone/002-create-smartphone-operating-systems.yaml
+++ b/src/main/resources/db/changelog/0.1.0/smartphone/002-create-smartphone-operating-systems.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 001-create-smartphone-brands
+      id: 002-create-smartphone-operating-systems
       author: grz55
       changes:
         - createTable:
-            tableName: smartphone_brands
+            tableName: smartphone_operating_systems
             columns:
               - column:
                   name: id
