--- a/src/main/resources/db/changelog/0.1.0/test_data/dictionary/003-insert-data-brands.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/dictionary/003-insert-data-brands.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 001-insert-data-tv-brands
+      id: 003-insert-data-brands
       author: grz55
       changes:
         - loadUpdateData:
-            file: classpath:/db/changelog/0.1.0/test_data/tv/tv-brands.csv
+            file: classpath:/db/changelog/0.1.0/test_data/dictionary/brands.csv
             separator: ','
-            tableName: tv_brands
+            tableName: brands
             primaryKey: id
