--- a/src/main/resources/db/changelog/0.1.0/test_data/dictionary/changelog-0.1.0-dictionary-data.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/dictionary/changelog-0.1.0-dictionary-data.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: 002-insert-data-graphics-card-brands.yaml
       relativeToChangelogFile: true
+  - include:
+      file: 003-insert-data-brands.yaml
+      relativeToChangelogFile: true
