--- a/.github/workflows/render-deployment.yml
+++ b/.github/workflows/render-deployment.yml
@@ -25,7 +25,7 @@ jobs:
         run: mvn spotless:check
 
       - name: Code compilation
-        run: mvn compile
+        run: mvn compile -Pprod
 
       - name: Unit testing
         run: mvn test
