--- a/Dockerfile.dev-h2
+++ b/Dockerfile.dev-h2
@@ -1,6 +1,6 @@
 FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
 COPY . .
-RUN mvn clean package -DskipTests
+RUN mvn clean package -DskipTests -Pdev-h2
 
 FROM eclipse-temurin:17-jre-alpine
 COPY --from=build /target/*.jar compstore.jar
