--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -6,5 +6,11 @@ spring:
     driverClassName: org.postgresql.Driver
   jpa:
     spring.jpa.database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        format_sql: false
   hibernate:
     ddl-auto: validate
+
+cors:
+  allowed-origins: ${PROD_ALLOWED_FRONTEND}
