--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,8 @@ server:
   port: 8080
 
 spring:
+  profiles:
+    active: dev-h2
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
     enabled: true
@@ -10,3 +12,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
