--- a/src/main/resources/application-dev-h2.yaml
+++ b/src/main/resources/application-dev-h2.yaml
@@ -4,6 +4,9 @@ spring:
     username: user
     password: test
     driverClassName: org.h2.Driver
+  output:
+    ansi:
+      enabled: always
   jpa:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
   h2:
