--- a/src/main/resources/db/changelog/0.1.0/smartphone/003-create-smartphone-relationships.yaml
+++ b/src/main/resources/db/changelog/0.1.0/smartphone/003-create-smartphone-relationships.yaml
@@ -5,6 +5,12 @@ databaseChangeLog:
       changes:
         - addForeignKeyConstraint:
             baseTableName: smartphones
+            baseColumnNames: smartphone_uuid
+            referencedTableName: products
+            referencedColumnNames: id
+            constraintName: fk_smartphones_products
+        - addForeignKeyConstraint:
+            baseTableName: smartphones
             baseColumnNames: brand_uuid
             referencedTableName: brands
             referencedColumnNames: id
