--- a/src/main/resources/db/changelog/0.1.0/test_data/tv/001-insert-data-tvs.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/tv/001-insert-data-tvs.yaml
@@ -7,4 +7,4 @@ databaseChangeLog:
             file: classpath:/db/changelog/0.1.0/test_data/tv/tvs.csv
             separator: ','
             tableName: tvs
-            primaryKey: id
+            primaryKey: tv_uuid
