--- a/src/main/resources/db/changelog/0.1.0/tv/001-create-tvs.yaml
+++ b/src/main/resources/db/changelog/0.1.0/tv/001-create-tvs.yaml
@@ -7,7 +7,7 @@ databaseChangeLog:
             tableName: tvs
             columns:
               - column:
-                  name: id
+                  name: tv_uuid
                   type: uuid
                   constraints:
                     nullable: false
@@ -85,10 +85,5 @@ databaseChangeLog:
               - column:
                   name: usb_count
                   type: int
-                  constraints:
-                    nullable: false
-              - column:
-                  name: price
-                  type: decimal(10, 2)
                   constraints:
                     nullable: false
