--- a/src/main/resources/db/changelog/0.1.0/tv/002-create-tv-relationships.yaml
+++ b/src/main/resources/db/changelog/0.1.0/tv/002-create-tv-relationships.yaml
@@ -5,6 +5,12 @@ databaseChangeLog:
       changes:
         - addForeignKeyConstraint:
             baseTableName: tvs
+            baseColumnNames: tv_uuid
+            referencedTableName: products
+            referencedColumnNames: id
+            constraintName: fk_tvs_products
+        - addForeignKeyConstraint:
+            baseTableName: tvs
             baseColumnNames: brand_uuid
             referencedTableName: brands
             referencedColumnNames: id
