--- a/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
+++ b/src/main/resources/db/changelog/0.1.0/changelog-0.1.0.yaml
@@ -3,6 +3,9 @@ databaseChangeLog:
       file: dictionary/changelog-0.1.0-dictionary.yaml
       relativeToChangelogFile: true
   - include:
+      file: product/changelog-0.1.0-product.yaml
+      relativeToChangelogFile: true
+  - include:
       file: pc/changelog-0.1.0-pc.yaml
       relativeToChangelogFile: true
   - include:
@@ -10,4 +13,7 @@ databaseChangeLog:
       relativeToChangelogFile: true
   - include:
       file: tv/changelog-0.1.0-tv.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: order/changelog-0.1.0-order.yaml
       relativeToChangelogFile: true
