--- a/src/main/resources/db/changelog/0.1.0/pc/003-create-pc-relationships.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/003-create-pc-relationships.yaml
@@ -5,6 +5,12 @@ databaseChangeLog:
       changes:
         - addForeignKeyConstraint:
             baseTableName: pcs
+            baseColumnNames: pc_uuid
+            referencedTableName: products
+            referencedColumnNames: id
+            constraintName: fk_pcs_products
+        - addForeignKeyConstraint:
+            baseTableName: pcs
             baseColumnNames: processor_brand_uuid
             referencedTableName: processor_brands
             referencedColumnNames: id
