--- a/src/main/resources/db/changelog/0.1.0/test_data/pc/002-insert-data-pcs.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/pc/002-insert-data-pcs.yaml
@@ -7,4 +7,4 @@ databaseChangeLog:
             file: classpath:/db/changelog/0.1.0/test_data/pc/pcs.csv
             separator: ','
             tableName: pcs
-            primaryKey: id
+            primaryKey: pc_uuid
