--- a/src/main/resources/db/changelog/0.1.0/test_data/smartphone/002-insert-data-smartphones.yaml
+++ b/src/main/resources/db/changelog/0.1.0/test_data/smartphone/002-insert-data-smartphones.yaml
@@ -7,4 +7,4 @@ databaseChangeLog:
             file: classpath:/db/changelog/0.1.0/test_data/smartphone/smartphones.csv
             separator: ','
             tableName: smartphones
-            primaryKey: id
+            primaryKey: smartphone_uuid
