--- a/src/main/resources/db/changelog/0.1.0/product/001-create-products.yaml
+++ b/src/main/resources/db/changelog/0.1.0/product/001-create-products.yaml
@@ -13,6 +13,11 @@ databaseChangeLog:
                     nullable: false
                     primaryKey: true
               - column:
+                  name: description
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
                   name: price
                   type: decimal(10, 2)
                   constraints:
