--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<swagger.version>2.2.0</swagger.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<hibernate-jpamodelgen.version>6.3.1.Final</hibernate-jpamodelgen.version>
+		<problem.version>0.29.1</problem.version>
+		<jackson-datatype-problem.version>0.27.1</jackson-datatype-problem.version>
 	</properties>
 
 	<dependencies>
@@ -79,6 +81,16 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>problem-spring-web</artifactId>
+			<version>${problem.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>jackson-datatype-problem</artifactId>
+			<version>${jackson-datatype-problem.version}</version>
 		</dependency>
 	</dependencies>
 
