--- a/src/main/resources/application-dev-postgres.yaml
+++ b/src/main/resources/application-dev-postgres.yaml
@@ -11,3 +11,14 @@ spring:
     spring.jpa.database-platform: org.hibernate.dialect.PostgreSQLDialect
   hibernate:
     ddl-auto: validate
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8090/realms/compstore
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+jwt:
+  auth:
+    converter:
+      resource-id: compstore-api
+      principle-attribute: preferred_username
