--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -9,6 +9,17 @@ spring:
     show-sql: false
   hibernate:
     ddl-auto: validate
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${PROD_KEYCLOAK_REALM_ADDRESS}
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+jwt:
+  auth:
+    converter:
+      resource-id: compstore-api
+      principle-attribute: preferred_username
 
 cors:
   allowed-origins: ${PROD_ALLOWED_FRONTEND}
