fix(78): pc operating system nullable restored, no operating system option added

--- a/src/main/resources/db/changelog/0.1.0/pc/002-create-pcs.yaml
+++ b/src/main/resources/db/changelog/0.1.0/pc/002-create-pcs.yaml
@@ -50,3 +50,5 @@ databaseChangeLog:
               - column:
                   name: operating_system_uuid
                   type: uuid
+                  constraints:
+                    nullable: false
