fix(43): default value added to allowed frontend

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,9 @@ spring:
   jpa:
     show-sql: true
 
+cors:
+  allowed-origins: ${PROD_ALLOWED_FRONTEND:http://localhost:3000}
+
 management:
   endpoints:
     web:
