--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,16 @@ version: '3'
 
 services:
 
-  postgres:
+  postgres-keycloak:
     image: postgres:16.2
     profiles: [dev-postgres]
-    container_name: compstore-postgres-keycloak
+    container_name: compstore-keycloak-postgres
     restart: always
     ports:
-      - '5431:5432'
+      - '5430:5432'
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ./scripts/keycloak:/docker-entrypoint-initdb.d/
     environment:
-      POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: test
     networks:
@@ -21,7 +20,7 @@ services:
   keycloak:
     image: keycloak/keycloak:24.0
     profiles: [dev-postgres]
-    container_name: compstore-keycloak
+    container_name: compstore-keycloak-server
     restart: always
     ports:
       - '8090:8080'
@@ -29,16 +28,31 @@ services:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres/postgres
+      KC_DB_URL: jdbc:postgresql://postgres-keycloak/compstore-keycloak
       KC_DB_USERNAME: postgres
       KC_DB_PASSWORD: test
     depends_on:
-      postgres:
+      postgres-keycloak:
         condition: service_started
     networks:
       - compstore_network
     command:
       - start-dev
+
+  postgres-compstore:
+    image: postgres:16.2
+    profiles: [ dev-postgres ]
+    container_name: compstore-backend-postgres
+    restart: always
+    ports:
+      - '5431:5432'
+    volumes:
+      - ./scripts/postgres:/docker-entrypoint-initdb.d/
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: test
+    networks:
+      - compstore_network
 
   backend-dev-postgres:
     build:
@@ -46,16 +60,23 @@ services:
       args:
         - MAVEN_PROFILE=dev-postgres
     profiles: [dev-postgres]
-    container_name: compstore-api-postgres
+    container_name: compstore-api-dev-postgres
     ports:
       - '8080:8080'
     environment:
       SPRING_PROFILES_ACTIVE: dev-postgres
+      DB_HOST: postgres-compstore
+      DB_PORT: 5432
+      DB_NAME: compstore-postgres
+      KEYCLOAK_HOST: keycloak
+      KEYCLOAK_PORT: 8080
     restart: unless-stopped
     depends_on:
-      postgres:
+      postgres-keycloak:
         condition: service_started
       keycloak:
+        condition: service_started
+      postgres-compstore:
         condition: service_started
     networks:
       - compstore_network
@@ -66,7 +87,7 @@ services:
       args:
         - MAVEN_PROFILE=dev-h2
     profiles: [dev-h2]
-    container_name: compstore-api-h2
+    container_name: compstore-api-dev-h2
     ports:
       - '8080:8080'
     environment:
@@ -76,6 +97,3 @@ services:
 networks:
   compstore_network:
     driver: bridge
-
-volumes:
-  pgdata:
